--- a/css/styles.css
+++ b/css/styles.css
@@ -7,39 +7,49 @@ body{
     background-size: cover;
 }
 
-img{ width: 100%; height: 100%;}
+img{ width: 50%; height: 100%; border-radius: 15px;}
 
-.img-container{ width: 80%; height: 800px; border-radius: 15px; overflow: hidden;}
+.img-container{ width: 99% !important; height: 800px; overflow: hidden;}
 
 .img-description{ 
-    top: 0; 
-    left: 0; 
-    width: 100%; 
-    height: 100%; 
+    width: 50%; 
+    height: 50%; 
+    border-radius: 15px;
+    padding: 5px;
     background-color: rgba(0, 0, 0, 0.589); 
     color: white;
     transform: scale(0);
     transition: transform 0.3s ease-in-out;
+    overflow-y: scroll;
 }
 
 .img-container:hover .img-description{
     transform: scale(1);
 }
 
-@media screen and (max-width:1500px){
-    .img-container{ width: 95%;}
+@media screen and (max-width:1000px){
+    img{ height: 50%;}
 }
 
-@media screen and (max-width:600px){
-    .img-container{ width: 100%; height: 600px; }
+@media screen and (max-width:770px){
+    img{ width: 100%;}
+
+    .img-description{ width: 100%; transform: scale(1); transition: none !important;}
+
+    .img-container:hover .img-description{ transform: none;}
+
+    .img-description p{ font-size: 0px; transition: font-size 0.6s ease-in;}
+
+    .img-description:hover p{
+        font-size: 18px;
+    }
+
+   
+    
 }
 
 @media screen and (max-width:400px){
-    .container-fluid{ padding: 5px !important;}
+    img{ height: 40%;}
 
-    .img-container{ height: 50%; }
-
-    .card-text{ font-size: 12px !important;}
-
-    .img-description{ gap: 10px !important;}
+    .img-description{ height: 40%;}
 }
