--- a/css/styles.css
+++ b/css/styles.css
@@ -40,12 +40,7 @@ img{ width: 50%; height: 100%; border-radius: 15px;}
 
     .img-description p{ font-size: 0px; transition: font-size 0.6s ease-in;}
 
-    .img-description:hover p{
-        font-size: 18px;
-    }
-
-   
-    
+    .img-description:hover p{ font-size: 18px; }
 }
 
 @media screen and (max-width:400px){
